# jbd-mosqlimate-sprint

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
Demo Notebooks/: Python demo.ipynb
data/: dataset_complete_dengue_uf.parquet
data/2_inter/: enso_interpolated.parquet  geodata_uf.parquet
data/3_primary/: complete_dataset.parquet
data/4_model_output/: validation_sprint_1.parquet  validation_sprint_2.parquet  validation_sprint_3.parquet
data/5_predictions/: submission1.parquet  submission2.parquet  submission3.parquet
dataprep/: 1_enso_interpolation.ipynb  2_geographic_uf.ipynb  3_join_aggregate_data.ipynb  enso_interpolation.ipynb
forecast_evaluation/: evaluate.ipynb
notebooks/: aws_mosqlimate.ipynb  aws_mosqlimate_baseline.ipynb  aws_mosqlimate_enso.ipynb  aws_mosqlimate_finetunning.ipynb  aws_mosqlimate_logscale.ipynb  model_submission.ipynb  pareto_municipality.ipynb  post_processing.ipynb
old_exploration/: AutoGluonSprintMosqlimate.ipynb  aws_forecasting_chronos.ipynb  aws_mosqlimate_enso.ipynb  aws_mosqlimate_exo.ipynb  aws_mosqlimate_finetunning.ipynb  aws_mosqlimate_logscale.ipynb  aws_pareto.ipynb  data_prep.ipynb  pareto_municipality.ipynb  spatial_relation.ipynb
post_processing/: post_processing.ipynb  showcasepost_processing.ipynb  submission.ipynb
predictions/: autogluon_baseline.parquet
train_model/: train.ipynb
train_model/SprintModels/chronos_bolt_small1/: learner.pkl  predictor.pkl
train_model/SprintModels/chronos_bolt_small2/: learner.pkl  predictor.pkl
train_model/SprintModels/chronos_bolt_small3/: learner.pkl  (+1 more)
(+21 files in other folders)
